force-app/main/default/objects/LLC_BI__Ownership_Structure_Role__c/fields/LLC_BI__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is required to activate an ownership structure role. Ownership structure roles define individual or business ownership of a deposit account. This flag to be set if role is currently used.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>