force-app/main/default/objects/LLC_BI__Ownership_Structure_Role__c/fields/LLC_BI__Is_Authorized_Business__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Authorized_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators select this optional boolean field to indicate if a business relationship with this Ownership Structure role is authorized to authorize an individual or another business relationship as an authorized role. By default, it is false.</description>
    <inlineHelpText>Select this field when this Ownership Structure role is for an authorized business.</inlineHelpText>
    <label>Is Authorized Business</label>
    <type>Checkbox</type>
</CustomField>