force-app/main/default/objects/LLC_BI__Ownership_Structure_Role__c/fields/LLC_BI__Is_Authorized_Signer__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Authorized_Signer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators select this optional boolean field to indicate if an individual relationship with this Ownership Structure role is authorized to transact on a particular product on behalf of a legal entity. By default, it is false.</description>
    <label>Is Authorized Individual</label>
    <type>Checkbox</type>
</CustomField>