force-app/main/default/objects/LLC_BI__Ownership_Structure_Role__c/fields/LLC_BI__Is_Required__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is required to indicate if an ownership structure role is required. Requiring ownership structure roles enforces that role be assigned to a desposit account during the New Deposit Workflow. This flag is to be set if role is required for ownership structure type.</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>