force-app/main/default/objects/LLC_BI__Ownership_Structure_Role__c/fields/LLC_BI__Ownership_Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ownership_Structure_Type__c</fullName>
    <description>This field is required when configuring deposit ownership structures for the New Deposit Workflow. It assocaites an ownership structure role to a ownership structure type.</description>
    <label>Ownership Structure Type</label>
    <referenceTo>LLC_BI__Ownership_Structure_Type__c</referenceTo>
    <relationshipLabel>Ownership Structure Roles</relationshipLabel>
    <relationshipName>Ownership_Structure_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>